<resources>
    <string name="app_name_button">Connect4</string>
    <string name="start_game_button">START GAME</string>
    <string name="options_button">OPTIONS</string>
    <string name="exit_button">EXIT</string>
    <string name="restart_button">RESTART</string>
    <string name="back_to_main_menu">BACK TO MAIN MENU</string>
    <string name="number_of_turn">TURN NUMBER:</string>
    <string name="actual_player">ACTUAL PLAYER:</string>
    <string name="title_activity_end_game">EndGameActivity</string>
    <string name="fill_toast">This place cannot be filled!</string>
    <string name="occupy_toast">This place is occupied!</string>
</resources>
